web/styles/style.css
/***********************
       Page Layout
************************/
* {
    margin: 0;
}
html {
    width: 100%;
    height: 100%;
}
body {
    width: 100%;
    height: 100%;
    background: url(/images/background_squares.png);
}

/***********************
          Fonts
************************/
/* Ruthie */
@font-face {
    font-family: "Ruthie";
    src: url(/fonts/ruthie_regular.ttf);
}

body, td, th, input {
    font-family: "Century Gothic", "Trebuchet MS", "Ubuntu", sans-serif;
    text-align: justify;
    font-size: 0.875rem;
    color: #333333;
    word-wrap: break-word;
    font-weight: normal;
}

pre {
    font-family: "Consolas", "Ubuntu Mono", "Courier New", monospace;
    display: inline;
    white-space: pre-wrap;
    word-wrap: break-word;
}

code {
    font-family: "Consolas", "Ubuntu Mono", "Courier New", monospace;
    display: inline;
    font-size: 0.8125rem;
    white-space: pre-wrap;
    word-wrap: break-word;
}

var {
    font-family: "Century Gothic", "Trebuchet MS", "Ubuntu", sans-serif;
    color: #000000;
    font-weight: bold;
    font-style: normal;
}

/*
These are intentionally set to em, instead of rem. Do not change!
*/
sub, sup {
    font-size: 0.66em;
    line-height: 1em;
}

/***********************
         Links
************************/
a, div.link {
    display: inline;
    font-size: inherit;
    color: #0099FF;
}
a:link, div.link:link {
    text-decoration: none;
}
a:visited, div.link:visited {
    text-decoration: none;
    color: #0099FF;
}
a:hover, div.link:hover {
    text-decoration: none;
    color: #00CCFF;
    cursor: pointer;
}
a:active, div.link:active {
    text-decoration: none;
    color: #0099FF;
}

a.decorated {
    color: #111111;
}

a.white, div.white {
    color: #EEEEEE;
}

a.white:hover, div.white:hover {
    color: #FFFFFF;
    text-decoration: underline;
}

/***********************
      Positioning
************************/
.left {
    text-align: left;
}
.right {
    text-align: right;
}
.top {
    vertical-align: top;
}
.bottom {
    vertical-align: bottom;
}
.center {
    margin-left: auto;
    margin-right: auto;
    left: auto;
    right: auto;
    text-align: center;
}
.inline {
    display: inline;
}

/***********************
         Styling
************************/
.bold {
    font-weight: bold;
}
.italic {
    font-style: italic;
}

/***********************
     Section Headers
************************/
h1 {
    font-size: 2rem;
    font-weight: bold;
    margin-bottom: 0.125rem;
    padding-bottom: 0.0625rem;
    border-bottom: 0.0625rem dotted #999999;
}
h2 {
    font-size: 1.5rem;
    font-weight: bold;
    color: #333333;
    margin: 0.375rem 0;
    padding-bottom: 0.125rem;
    border-bottom: 0.0625rem dotted #999999;
}
h3 {
    font-size: 1.25rem;
    font-weight: bold;
    margin-top: 1.5rem;
}
h4 {
    font-size: 0.875rem;
    font-weight: bold;
    font-style: italic;
    color: #333333;
    margin-top: 1rem;
}

/***********************
         Lists
************************/
ol, ul {
    margin: 0.25rem, 0;
}

/***********************
     Content Layout
************************/
div.wrapper {
    min-height: 100%;
    position: relative;
}

div.header {
    width: 100%;
    height: 5.625rem;
    overflow: hidden;
    background: #0099FF;
    box-shadow: 0 0 0.25rem 0.125rem rgba(0, 0, 0, 0.24);
    top: 0;
}

div.main {
    width: 100%;
    overflow-x: auto;
    top: 5.75rem;
    padding-bottom: 1.875rem;
}

div.footer {
    width: 100%;
    line-height: 1.875rem;
    overflow: hidden;
    color: #EEEEEE;
    background: #0099FF;
    position: absolute;
    bottom: 0;
}

div.footer-left {
    display: inline-block;
    float: left;
    width: 6.25rem;
    text-align: left;
}

div.footer-middle {
    display: inline-block;
    float: left;
    font-size: 0.6875rem;
    width: 37.5rem;
    text-align: center;
}

div.footer-right {
    display: inline-block;
    float: left;
    width: 6.25rem;
    text-align: right;
}

div.container {
    width: 50rem;
    min-width: 50rem;
    max-width: 50rem;
    margin: 0 auto;
}

div.noselect {
    -webkit-user-select: none;   /* Chrome/Safari/Opera */
    -khtml-user-select: none;    /* Konqueror */
    -moz-user-select: none;      /* Firefox */
    -ms-user-select: none;       /* Internet Explorer/Edge */
    user-select: none;
}

div.box {
    margin: 0.5rem auto;
    padding: 1.5rem 3.5rem 2rem 3.5rem;
    background: #FFFFFF;
    border: 0.0625rem solid #ccc;
    box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.24);
    border-radius: 0.25rem;
}

div.box-problem {
    padding-bottom: 1rem;
}

div.narrow {
    padding: 0.625rem 3.125rem;
}

div.boxlink:hover {
    background-color: #FAFAFA;
    cursor: pointer;
}

div.boxlink:active {
    background-color: #FFFFFF;
}

div.fullsize {
    width: 43.75rem;
    min-width: 43.75rem;
    max-width: 43.75rem;
}

div.centered {
    text-align: center;
}

div.authenticate {
    position: absolute;
    height: 16rem;
    width: 24rem;
    min-width: 24rem;
    max-width: 24rem;
    top: 50%;
    margin-top: -8rem;
    left: 50%;
    margin-left: -12rem;
}

div.register {
    position: absolute;
    height: 40rem;
    width: 50rem;
    min-width: 50rem;
    max-width: 50rem;
    top: 50%;
    margin-top: -20rem;
    left: 50%;
    margin-left: -25rem;
    z-index: 89;
}

div.login {
    padding: 1rem 3rem;
}

div.menu {
    width: 50rem;
    height: 5.625rem;
    left: 50%;
    position: absolute;
    margin-left: -25rem;
    overflow: hidden;
}
table.menu {
    width: 50rem;
    border-spacing: 0;
}
table.menu .button {
    padding: 0;
    margin-top: -0.5rem;
    width: 6.25rem;
    font-size: 0.9375rem;
    text-align: center;
    vertical-align: middle;
}

table.menu .logo {
    width: 12.5rem;
    vertical-align: middle;
}

div.logo {
    height: 5rem;
    margin-top: 0.5rem;
    line-height: 5rem;
    text-align: center;
    font-size: 4rem;
    font-family: "Ruthie", cursive;
    color: #FFFFFF;
}
/* ... */

